--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-JWT_SECRET=jwt_secret
+JWT_SECRET=your_jwt_secret
 
-DB_USER=db_username
-DB_PASSWORD=db_password
+DB_USER=postgres
+DB_PASSWORD=your_db_password
 DB_HOST=postgres
 DB_NAME=leaderboard
 DB_PORT=5432
