--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,7 +22,7 @@ services:
   app:
     build:
       context: ./
-      target: development
+      target: production
     ports:
       - "5000:5000"
     environment:
@@ -34,8 +34,7 @@ services:
       - JWT_SECRET=${JWT_SECRET}
     volumes:
       - .:/app
-      - /app/node_modules
-    command: npm run dev
+    command: npm start
 
 volumes:
   postgres_data:
